fix content alignment
git-svn-id: http://svn.procergs.reders/vpr/branches/2.0@461 d2da55db-5866-43f3-bc33-3da1c376b5d1

--- a/src/PROCERGS/VPR/CoreBundle/Resources/public/css/general.css
+++ b/src/PROCERGS/VPR/CoreBundle/Resources/public/css/general.css
@@ -68,25 +68,20 @@ footer {
   width: 100%;
 }
 
-.form-group label {
-  color: #007136;
-  font-size: 18px;
-  font-weight: normal;
-}
-
-.form-horizontal,
 .form-inline {
-  margin: 50px 0;
-}
-
-.form-horizontal label,
-.form-inline label {
-  height: 32px;
-  line-height: 32px;
+  margin: 20px 0;
 }
 
 .form-inline .form-group {
   margin-bottom: 0;
+}
+
+.form-inline label {
+  color: #007136;
+  font-size: 18px;
+  font-weight: normal;
+  height: 32px;
+  line-height: 32px;
 }
 
 .form-inline .btn-block {
@@ -172,27 +167,99 @@ footer {
 
 .main-title {
   color: #007136;
-  display: inline-block;
-  margin-bottom: 30px;
+  line-height: 35px;
   position: relative;
-  padding-left: 40px;
+  vertical-align: middle;
 }
 
-.main-title:before {
-  content: "";
-  display: block;
-  position: absolute;
-}
-
-.ballot-search-title:before {
-  background-position: -7px -193px;
+.main-title .icon {
+  display: inline-block;
+  float: left;
   height: 35px;
-  left: 0;
-  top: -5px;
-  width: 25px;
+  margin-right: 20px;
+}
+
+.main-title .icon:before {
+  background-repeat: no-repeat;
+  content: "";
+  display: inline-block;
+  height: 35px;
+}
+
+.ballot-search-title .icon:before {
+  background-position: -7px -193px;
+  width: 26px;
+}
+
+.place-search-title .icon:before {
+  background-position: 0 -259px;
+  width: 38px;
 }
 
 
+
+
+/*
+ * Large devices
+ */
+ @media (min-width: 768px) {
+
+  .form-inline .form-group {
+    margin-right: 10px;
+  }
+
+  .main-title {
+    line-height: 72px;
+    margin-bottom: 30px;
+  }
+
+  .main-title .icon {
+    height: 72px;
+    text-align: right;
+    width: 100px;
+  }
+
+  .main-title .icon:before {
+    background-image: url('../images/icon-set-desktop.png');
+    height: 72px;
+  }
+
+  .ballot-search-title .icon:before {
+    background-position: -12px -76px;
+    width: 54px;
+  }
+
+  .place-search-title .icon:before {
+    background-position: 0 -1px;
+    width: 77px;
+  }
+
+  .inner-content {
+    padding: 0 120px;
+  }
+
+  .twitter-typeahead {
+    min-width: 300px;
+  }
+
+}
+
+/*
+ * Medium devices
+ */
+ @media (min-width: 768px) and (max-width: 991px) {
+  .main-title .icon {
+    text-align: left;
+    width: auto;
+  }
+
+  .inner-content {
+    padding: 0;
+  }
+
+
+
+}
 
 
 /*
@@ -203,7 +270,7 @@ footer {
     font-size: 20px;
   }
 
-  .main-title:before {
+  .main-title .icon:before {
     background-image: url('../images/icon-set.png');
   }
 
@@ -214,21 +281,7 @@ footer {
 }
 
 
-/*
- * Medium devices
- */
- @media (min-width: 768px) and (max-width: 991px) {
- }
 
-
-/*
- * Large devices
- */
- @media (min-width: 768px) {
-  .form-horizontal label {
-    float: right;
-  }
- }
 
 
 
