--- a/src/PROCERGS/VPR/CoreBundle/Resources/public/css/search/search.css
+++ b/src/PROCERGS/VPR/CoreBundle/Resources/public/css/search/search.css
@@ -3,25 +3,4 @@
  */
  @media (min-width: 768px) {
 
-  .main-title {
-    margin-bottom: 60px;
-    padding-left: 80px;
-  }
-
-  .main-title:before {
-    background-image: url('../../images/icon-set-desktop.png');
-  }
-
-  .ballot-search-title:before {
-    background-position: -12px -76px;
-    height: 72px;
-    top: -22px;
-    width: 54px;
-  }
-
-  .form-inline .form-group {
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-
 }
